syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ksivvi0/statusdetector/internal/server";

service Detector {
    rpc GetHistory(URLRequest) returns (HistoryResponse) {}
    rpc GetStatus(URLRequest) returns (URLResponse) {}
    rpc DropURL(URLRequest) returns (VoidResponse) {}
}

message URLRequest {
    string url = 1;
    enum TimeFormat {
        daily = 0;
        hourly = 1;
        minutely = 2;
    }
    TimeFormat time = 2;
}

message History {
    google.protobuf.Timestamp check_time = 1;
    int32 code = 2;
}

message URLResponse {
    repeated History history = 1;
}

message HistoryResponse {
    string url = 1;
    repeated History history = 2;
}

message VoidResponse {}